# embedded2016-study

./: .gitignore  CMakeLists.txt  README.md
jul24/: CMakeLists.txt
jul24/quiz3/: .gitignore  CMakeLists.txt  bubble_sort.c  list.c  list.h  merge_sort.c
jul25/quiz0/: Makefile  README.md  bubblesort.s  main.c  run.sh
jul26/quiz0/: Makefile  main.c
