INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BUILD_DIR})

SET(COMMON list.c)

SET(BUBBLE_SORT_SOURCES bubble_sort.c ${COMMON})
SET(MERGE_SORT_SOURCES  merge_sort.c ${COMMON})

ADD_EXECUTABLE(bubble_sort ${BUBBLE_SORT_SOURCES})
ADD_EXECUTABLE(merge_sort  ${MERGE_SORT_SOURCES})
